--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ loadMarkdown("README.md", "readmeDiv", "_parent");
 
 <body>
 <div class="content contentpadding large-list">
+  <a href="../profile/trade/">International Trade Flow</a>
   <div id="readmeDiv"></div>
 </div>
 
